--- a/views/home.ejs
+++ b/views/home.ejs
@@ -7,8 +7,9 @@
     <h1 class="display-3">Secrets</h1>
     <p class="lead">Don't keep your secrets, share them anonymously!</p>
     <hr>
-    <a class="btn btn-light btn-lg" href="/register" role="button">Register</a>
-    <a class="btn btn-dark btn-lg" href="/login" role="button">Login</a>
+    <a class="btn btn-outline-success btn-lg" href="/register" role="button">Register</a>
+    <a class="btn btn-outline-primary btn-lg mx-3" href="/login" role="button">Login</a>
+    <a class="btn btn-outline-info btn-lg" href="/secrets" role="button">View Secrets</a>
 
   </div>
 </div>
