add secrets collection

--- a/views/secrets.ejs
+++ b/views/secrets.ejs
@@ -16,7 +16,7 @@
 
 <div class="container">
   
-  <% usersWithSecrets.forEach(function(user){ %>
+  <% secrets.forEach(function(user){ %>
       <p class="secret-text"><%=user.secret%> </p>    
   <% }); %>
 </div>
