update secrets form

--- a/views/secrets.ejs
+++ b/views/secrets.ejs
@@ -16,8 +16,23 @@
 
 <div class="container">
   
-  <% secrets.forEach(function(user){ %>
-      <p class="secret-text"><%=user.secret%> </p>    
+  <% secrets.forEach(function(item){ %>
+    <div class="card text-center mx-auto my-5 border border-dark bg-dark" style="max-width: 48rem;">
+      <div class="card-header border-light">
+       <img class="float-left" src="images/secret-folder-96.png" alt="Card image cap" style="max-width: 2.5rem;">
+      </div>
+      <div class="card-body">
+        <h5 class="card-title text-primary"><%=item.title%> </h5>
+        <p class="card-text text-white"><%=item.secret%></p>
+      </div>
+      
+      <div class="card-footer bg-transparent border-light">Your Secret is 
+        safe
+      </div>
+      
+    </div>
+
+      <!-- <p class="secret-text"><%=item.secret%> </p>     -->
   <% }); %>
 </div>
 
