--- a/views/submit.ejs
+++ b/views/submit.ejs
@@ -9,6 +9,7 @@
     <form action="/submit" method="POST">
 
       <div class="form-group">
+        <input type="text" class="form-control text-center" name="secretTitle" placeholder="Your secret's title">
         <input type="text" class="form-control text-center" name="secret" placeholder="What's your secret?">
       </div>
       <button type="submit" class="btn btn-outline-dark">Submit</button>
